# mstsfence

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: _release.yml  release-manual.yml  release-tag.yml  windows-ci.yml
.tmp/: mstscax.allsyms.txt  mstscax.callers.txt  mstscax.symbols.txt
scripts/: build_windows.ps1  make_icon.ps1  package_windows_msix.ps1  unstick-payload.ps1
src/: darkmode.cpp  darkmode.h  hook.cpp  main.cpp  mstscax_builds.h  mstsfence.exe.manifest  mstsfence.exe.manifest.in  mstsfence.rc.in  mstsfencehook.rc.in  rdpedisp.cpp  rdpedisp.h  resource.h  settings.cpp  settings.h  vcpkg.json  version.h.in  wmlta.exe.manifest  wmlta.rc.in  wmltahook.rc.in
src/msix/: AppxManifest.xml.in
